Update Descriptio in HTML

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muneeb - Web Developer Portfolio</title>
-    <meta name="description" content="Muneeb's portfolio - 3 years of experience crafting modern web applications with React, JavaScript, and innovative solutions." />
+    <meta name="description" content="Muneeb's portfolio - 2+ years of experience crafting modern web applications with React, JavaScript, and innovative solutions." />
     <meta name="author" content="Muneeb" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
